crates/libtest2/tests/ui/unsupported_parameter.rs
#[libtest2::main]
fn main() {}

#[libtest2::test]
fn takes_integer(_: i32) {}
